# ya-runtime-cruncher

./: Cargo.toml  README.md  prepare_client.sh
.ci/: pack-build.sh
.github/workflows/: playground.yml  release.yml
conf/: ya-dummy-cruncher.json
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
gpu-detection/src/: model.rs
playground/centralnet/: Dockerfile
src/: agreement.rs  cli.rs  main.rs  offer-template.json  offer_template.rs  process.rs  requests.rs
src/process/: dummy.rs
tests/resources/: agreement.json
