[package]
name = "ya-runtime-cruncher"
version = "0.2.7"
edition = "2021"

[workspace]
members = [
    "gpu-detection",
]

[dependencies]
ya-core-model = { git = "https://github.com/golemfactory/yagna.git", rev = "925818eb7267602c09599be023a40bec0a49c5fb", features = ["activity", "appkey"] }
ya-runtime-api = { git = "https://github.com/golemfactory/yagna.git", rev = "925818eb7267602c09599be023a40bec0a49c5fb", features = ["server"] }
ya-service-bus = "0.7.3"
ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "b4bf2aab46181d594dcba5b6956c03172ee1f2ea" }

ya-agreement-utils = "0.5"
ya-transfer = { git = "https://github.com/golemfactory/yagna.git", rev = "925818eb7267602c09599be023a40bec0a49c5fb" }
gpu-detection = { path = "gpu-detection" }

actix = "0.13"
actix-rt = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
anyhow = "1.0"
flexi_logger = "0.30.1"
chrono = "0.4.34"
tokio = { version = "1.32", features = ["macros", "signal"] }
futures = "0.3"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }

[build-dependencies]
static_vcruntime = "2.0"

[profile.dev]
debug = false
incremental = false

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2
